# quodom-web/api/src/routes/user_direcciones.route.js
@@ -1,34 +1,19 @@
 const express = require('express');
 const router = express.Router();
-const Joi = require('joi');
 const auth = require('../middleware/auth');
+const omitEmpty = require('../middleware/omitEmpty');
+
+const EMPTY = omitEmpty(['piso', 'direccion', 'observaciones']);
 const Controler = require('../controllers/user_direcciones.controller');
-const validateRequest = require('../middleware/validate-request');
 
 router.get('/direcciondefault', auth.verifyToken(), getDireccionDefault);
 router.get('/:id', auth.verifyToken(), getById);
-router.post('/create', auth.verifyToken(), direccionSchema, create);
+router.post('/create', auth.verifyToken(), EMPTY, create);
 router.put('/prin/:id', auth.verifyToken(), updatePrincipal);
-router.put('/:id', auth.verifyToken(), direccionSchema, update);
+router.put('/:id', auth.verifyToken(), EMPTY, update);
 router.delete('/:id', auth.verifyToken(), _delete);
 
 module.exports = router;
-
-function direccionSchema(req, res, next) {
-  const schema = Joi.object({
-    alias: Joi.string(),
-    calle: Joi.string(),
-    numero: Joi.string(),
-    piso: Joi.string().empty(''),
-    cp: Joi.string(),
-    localidad: Joi.string(),
-    direccion: Joi.string().empty(''),
-    observaciones: Joi.string().empty(''),
-    idprovincia: Joi.number().integer(),
-    default: Joi.boolean()
-  });
-  validateRequest(req, next, schema);
-}
 
 function getById(req, res, next) {
   Controler.getById(req.params.id, req.user.id)
